<resources>
    <string name="app_name">Meli Explorer</string>
    <string name="search_articles">SEARCH ARTICLES</string>
    <string name="random_article">RANDOM ARTICLE</string>
    <string name="title">Title</string>
    <string name="article_picture">Article picture</string>
    <string name="price">Price</string>
    <string name="search">Search</string>
    <string name="resource_not_found">No se encontró el recurso</string>
    <string name="bad_request">Solicitud incorrecta</string>
    <string name="server_error">Ocurrió un error en el servidor</string>
    <string name="unknown_error">Error desconocido</string>
    <string name="no_internet">No hay conexión</string>
</resources>